--- a/public/admin_assest/product/add/add.css
+++ b/public/admin_assest/product/add/add.css
@@ -1,1 +1,8 @@
-
+.image_detail_upload {
+    width: 100%;
+    height: 130px;
+    object-fit: cover;
+}
+.container_image_detail {
+    margin-top: 20px;
+}
